--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ run/
 .DS_Store
 *.sw*
 *.un~
-typings/
+# 保留手写的类型定义，只忽略自动生成的
+typings/**/*.js
+typings/**/package.json
 .nyc_output/
 
 /app/public/uploads/*
