数据库切换为 sqlite

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ruoyi-eggjs-cache": "^1.1.6",
     "ruoyi-eggjs-mybatis": "^1.1.13",
     "ruoyi-eggjs-mysql": "^1.1.15",
+    "ruoyi-eggjs-pgsql": "^1.1.6",
     "ruoyi-eggjs-ratelimiter": "^1",
     "ruoyi-eggjs-sqlite": "^1.1.9",
     "stream-wormhole": "^2.0.1",
